--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <br>
     
             <div class="cert">
-                <p>Web Design for Everybody Specialization by University Of Michigan</p>
+                <p>Web Design Specialization by University Of Michigan</p>
                 <img src="img/COlogo.jfif" alt="COlogo">
                 <a href="coursera.org/verify/specialization/7597DPJEGAZ8" target="blank">View Certificate</a>
             </div>
