--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="cert">
                 <p>Web Design Specialization by University Of Michigan</p>
                 <img src="img/COlogo.jfif" alt="COlogo">
-                <a href="coursera.org/verify/specialization/7597DPJEGAZ8" target="blank">View Certificate</a>
+                <a href="https://coursera.org/share/b6f2c7fbfc52e4cc05f42a75aa2ef963" target="blank">View Certificate</a>
             </div>
             
         </section>
