--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Pursuing B.Tech</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Delhi, India</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> shubhamgoel24.me</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Mail:</strong> shubhamgoel24@gmail.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Mail:</strong> sshubhamgoel24@gmail.com</li>
                 </ul>
               </div>
             </div>
@@ -206,8 +206,6 @@
               <h4>Personal Project</h4>
               <h5>Portfolio Website</h5>
               <p><em>shubhamgoel24.me </em></p>
-              <p><em>Made a portfolio website using Bootstrap, HTML, JS & CSS. 
-                     <br> Although its my first website, i am happy with the results. </em></p>
             </div>
             <div class="resume-item">
               <h4>Campus Ambassador Intern</h4>
