--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -46,7 +46,7 @@
         </tr>
 
         <tr>
-            <td><button>C</button></td>
+            <td><button class="clear">C</button></td>
             <td><button>0</button></td>
             <td><button>.</button></td>
             <td><button class="equal">=</button></td>
