--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
@@ -196,21 +192,28 @@
             </div>
             <div class="resume-item">
               <h4>New Green Field School</h4>
-              <h5>2003 - 2019</h5>
+              <h5>2005 - 2019</h5>
               <p><em>High School</em></p>
             </div>
-          </div>
-          <div class="col-lg-6">
+
             <h3 class="resume-title">Experience</h3>
-            <div class="resume-item">
-              <h4>Personal Project</h4>
-              <h5>Portfolio Website</h5>
-              <p><em>shubhamgoel24.me </em></p>
-            </div>
             <div class="resume-item">
               <h4>Campus Ambassador Intern</h4>
               <h5>April 2020 - May 2020</h5>
               <p><em>Street Music</em></p>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <h3 class="resume-title">Personal Projects</h3>
+            <div class="resume-item">
+              <h4>Portfolio Website</h4>
+              <h5><a href="http://www.shubhamgoel24.me" target="blank">shubhamgoel24.me</a></h5>
+              <p><em>Made a portfolio website using Bootstrap, HTML, JS & CSS.</em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Calculator</h4>
+              <h5><a href="http://www.shubhamgoel24.me/Calculator/index.html" target="blank">shubhamgoel24.me/Calculator</a></h5>
+              <p><em>A simple calculator using HTML, CSS, and JavaScript.</em></p>
             </div>
           </div>
         </div>
@@ -307,7 +310,7 @@
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>shubhamgoel24@gmail.com</p>
+                <p>sshubhamgoel24@gmail.com</p>
               </div>
 
             </div>
