--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -17,9 +17,9 @@
         </tr>
         
         <tr>
+            <td><button class="clear">C</button></td>
             <td><button>(</button></td>
             <td><button>)</button></td>
-            <td><button>&#60</button></td>
             <td><button>/</button></td>
         </tr>
 
@@ -46,7 +46,7 @@
         </tr>
 
         <tr>
-            <td><button class="clear">C</button></td>
+            <td><button onclick="clears()" id="clear"><img src="img/back.jpg" alt="backspace"></button></td>
             <td><button>0</button></td>
             <td><button>.</button></td>
             <td><button class="equal">=</button></td>
