--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Shubham Goel</h1>
-      <p>I'm <span class="typed" data-typed-items="Student, Coder, Web Developer, AI enthusiast"></span></p>
+      <p>I'm <span class="typed" data-typed-items="a Student,a Coder,a Web Developer,an AI enthusiast"></span></p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/shubhamgoel24/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="mailto: sshubhamgoel24@gmail.com" class="gmail"><i class="bx bx-envelope"></i></a>
