--- a/index.html
+++ b/index.html
@@ -159,13 +159,6 @@
               </div>
             </div>
 
-            <div class="progress">
-              <span class="skill">Django <i class="val"></i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
           </div>
 
         </div>
@@ -205,6 +198,11 @@
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Personal Projects</h3>
+            <div class="resume-item">
+              <h4>Roll-A-Dice</h4>
+              <h5><a href="http://www.shubhamgoel24.me/Roll-A-Dice/index.html" target="blank">shubhamgoel24.me/Roll-A-Dice</a></h5>
+              <p><em>A simple rolling dice to play. Made using HTML, JS & CSS.</em></p>
+            </div>
             <div class="resume-item">
               <h4>Portfolio Website</h4>
               <h5><a href="http://www.shubhamgoel24.me" target="blank">shubhamgoel24.me</a></h5>
