--- a/404/index.html
+++ b/404/index.html
@@ -6,25 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1">
     <title>404NameNotFound</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="home">
+    <script src="js/file.js"></script>
+    
+
+    <div class="botnav">
+        <nav class="nav">
+            <button onclick="homeshow()"><i class="fas fa-home" style="color: rgba(255, 255, 255,0.7); font-size: 3em;"></i></button>
+            <button onclick="settingshow()"><i class="fas fa-cogs" style="color: rgba(255, 255, 255,0.7); font-size: 3em;"></i></button>
+            <button onclick="achiveshow()"><i class="fas fa-trophy" style="color: rgba(255, 255, 255,0.7); font-size: 3em;"></i></button>
+            <button onclick="usershow()"><i class="fas fa-user" style="color: rgba(255, 255, 255,0.7); font-size: 3em;"></i></button>
+        </nav>
+    </div>
+
+
+    <div id="home">
         <div class="playb">
-            <button class="play">Play</button>
+            <button class="play">PLAY</button>
         </div>
 
-        <div class="botnav">
-            <nav class="nav">
-                <a href=""><i class="fas fa-home" style="color: white; font-size: 3em;"></i></a>
-                <a href=""><i class="fas fa-cogs" style="color: white; font-size: 3em;"></i></a>
-                <a href=""><i class="fas fa-trophy" style="color: white; font-size: 3em;"></i></a>
-                <a href=""><i class="fas fa-user" style="color: white; font-size: 3em;"></i></a>
-            </nav>
+    </div>
+
+
+
+    <div id="setting">
+        <h1 class="head">Settings</h1>
+        <div class="select">
+            <button>Visual</button>
+            <button>Control</button>
+            <button>Themes</button>
         </div>
     </div>
 
 
-    <script src="https://kit.fontawesome.com/15057286f2.js" crossorigin="anonymous"></script>
 
+    <div id="achivement">
+        <h1 class="head">Achivements</h1>
+
+    </div>
+
+
+
+    <div id="user">
+        <h1 class="head">User</h1>
+
+    </div>
+
+    <script src="https://kit.fontawesome.com/15057286f2.js" crossorigin="anonymous"></script>
 </body>
