--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <nav class="menuclose" id="menubar">
                 <a href="#home" onclick="openmenu()">Home</a><br>
                 <a href="#profile" onclick="openmenu()">Profile</a><br>
-                <a href="#education" onclick="openmenu()">Education</a><br>
                 <a href="#experience" onclick="openmenu()">Experience</a><br>
+                <a href="#education" onclick="openmenu()">Education</a><br>
                 <a href="#skills" onclick="openmenu()">Skills</a><br>
                 <a href="#contact" onclick="openmenu()">Contact</a><br>
             </nav>
@@ -76,8 +76,93 @@
             </div>
         </section>
 
+        <section id="experience" class="even">
+            <h2>Experience</h2>
+            <p>
+                “You can do anything you set your mind to.”
+                <br>- Benjamin Franklin
+            </p>
 
-        <section id="education" class="even">
+            <hr>
+            <br>
+
+            <div class="contain">
+                <div class="left">
+                    <h4>CodeSpeedy </h4>
+                </div>
+                <div class="right">
+                    <p class="pleft">
+                        <ul>
+                            <li>C++ Programmer Intern</li>
+                            <li>Feburary 2021 - May 2021</li>
+                        </ul>
+                    </p>
+                </div>
+            </div>
+
+            <div class="contain">
+                <div class="left">
+                    <h4>Street Music</h4>
+                </div>
+                <div class="right">
+                    <p class="pleft">
+                        <ul>
+                            <li>Campus Ambassador Intern</li>
+                            <li>April 2020 - May 2020</li>
+                        </ul>
+                    </p>
+                </div>
+            </div>
+
+            <hr>
+
+            <h3>Personal Projects</h3>
+            <br>
+
+            <div class="contain">
+                <div class="left">
+                    <h4>ROLL-A-DICE</h4>
+                </div>
+                <div class="right">
+                    <p class="pleft">
+                        <ul>
+                            <li><a href="http://www.shubhamgoel24.me/Roll-A-Dice/index.html" target="blank" class="link">shubhamgoel24.me/Roll-A-Dice</a></li>
+                            <li>A simple rolling dice to play. Made using HTML, JS & CSS.</li>
+                        </ul>
+                    </p>
+                </div>
+            </div>
+
+            <div class="contain">
+                <div class="left">
+                    <h4>PORTFOLIO WEBSITE</h4>
+                </div>
+                <div class="right">
+                    <p class="pleft">
+                        <ul>
+                            <li><a href="http://www.shubhamgoel24.me" target="blank" class="link">shubhamgoel24.me</a></li>
+                            <li>Made a portfolio website from scratch using HTML, JS & CSS.</li>
+                        </ul>
+                    </p>
+                </div>
+            </div>
+
+            <div class="contain">
+                <div class="left">
+                    <h4>CALCULATOR</h4>
+                </div>
+                <div class="right">
+                    <p class="pleft">
+                        <ul>
+                            <li><a href="http://www.shubhamgoel24.me/Calculator/index.html" target="blank" class="link">shubhamgoel24.me/Calculator</a></li>
+                            <li>A simple calculator using HTML, CSS, and JavaScript.</li>
+                        </ul>
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section id="education">
             <h2>Education</h2>
             <p>
                 “Protons give an atom its identity, electrons its personality.”
@@ -182,79 +267,6 @@
                             <li>Python Specialization by University Of Michigan</li>
                             <li><a href="http://coursera.org/verify/specialization/8PMN575BXDWU" target="blank" class="link">View Certificate</a></li>
                             <li>The course was on Python3 and covered wide range of topics like basics of python, DS, SQL, accesing web with python. It helped me get an overall overview of python programming.</li>
-                        </ul>
-                    </p>
-                </div>
-            </div>
-        </section>
-
-
-        <section id="experience">
-            <h2>Experience</h2>
-            <p>
-                “You can do anything you set your mind to.”
-                <br>- Benjamin Franklin
-            </p>
-
-            <hr>
-            <br>
-
-            <div class="contain">
-                <div class="left">
-                    <h4>Street Music</h4>
-                </div>
-                <div class="right">
-                    <p class="pleft">
-                        <ul>
-                            <li>Campus Ambassador Intern</li>
-                            <li>April 2020 - May 2020</li>
-                        </ul>
-                    </p>
-                </div>
-            </div>
-
-            <hr>
-
-            <h3>Personal Projects</h3>
-            <br>
-
-            <div class="contain">
-                <div class="left">
-                    <h4>ROLL-A-DICE</h4>
-                </div>
-                <div class="right">
-                    <p class="pleft">
-                        <ul>
-                            <li><a href="http://www.shubhamgoel24.me/Roll-A-Dice/index.html" target="blank" class="link">shubhamgoel24.me/Roll-A-Dice</a></li>
-                            <li>A simple rolling dice to play. Made using HTML, JS & CSS.</li>
-                        </ul>
-                    </p>
-                </div>
-            </div>
-
-            <div class="contain">
-                <div class="left">
-                    <h4>PORTFOLIO WEBSITE</h4>
-                </div>
-                <div class="right">
-                    <p class="pleft">
-                        <ul>
-                            <li><a href="http://www.shubhamgoel24.me" target="blank" class="link">shubhamgoel24.me</a></li>
-                            <li>Made a portfolio website from scratch using HTML, JS & CSS.</li>
-                        </ul>
-                    </p>
-                </div>
-            </div>
-
-            <div class="contain">
-                <div class="left">
-                    <h4>CALCULATOR</h4>
-                </div>
-                <div class="right">
-                    <p class="pleft">
-                        <ul>
-                            <li><a href="http://www.shubhamgoel24.me/Calculator/index.html" target="blank" class="link">shubhamgoel24.me/Calculator</a></li>
-                            <li>A simple calculator using HTML, CSS, and JavaScript.</li>
                         </ul>
                     </p>
                 </div>
