--- a/404/index.html
+++ b/404/index.html
@@ -10,17 +10,10 @@
 </head>
 
 <body>
-    <script src="js/file.js"></script>
-    
-
-    <div class="botnav">
-        <nav class="nav">
-            <button onclick="homeshow()"><i class="fas fa-home" style="color: rgba(255, 255, 255,0.7); font-size: 3em;"></i></button>
-            <button onclick="settingshow()"><i class="fas fa-cogs" style="color: rgba(255, 255, 255,0.7); font-size: 3em;"></i></button>
-            <button onclick="achiveshow()"><i class="fas fa-trophy" style="color: rgba(255, 255, 255,0.7); font-size: 3em;"></i></button>
-            <button onclick="usershow()"><i class="fas fa-user" style="color: rgba(255, 255, 255,0.7); font-size: 3em;"></i></button>
-        </nav>
-    </div>
+    <nav class="nav">
+        <button onclick="homeshow()" id="homebutton"><i class="fas fa-home" style="color: rgba(255, 255, 255,0.7); font-size: 3em;"></i></button>
+        <button onclick="settingshow()" id="settingsbutton"><i class="fas fa-cogs" style="color: rgba(255, 255, 255,0.7); font-size: 3em;"></i></button>
+    </nav>
 
 
     <div id="home">
@@ -41,19 +34,6 @@
         </div>
     </div>
 
-
-
-    <div id="achivement">
-        <h1 class="head">Achivements</h1>
-
-    </div>
-
-
-
-    <div id="user">
-        <h1 class="head">User</h1>
-
-    </div>
-
+    <script src="js/file.js"></script>
     <script src="https://kit.fontawesome.com/15057286f2.js" crossorigin="anonymous"></script>
 </body>
