--- a/404/index.html
+++ b/404/index.html
@@ -1,39 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1">
-    <title>404NameNotFound</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-</head>
-
-<body>
-    <nav class="nav">
-        <button onclick="homeshow()" id="homebutton"><i class="fas fa-home" style="color: rgba(255, 255, 255,0.7); font-size: 3em;"></i></button>
-        <button onclick="settingshow()" id="settingsbutton"><i class="fas fa-cogs" style="color: rgba(255, 255, 255,0.7); font-size: 3em;"></i></button>
-    </nav>
-
-
-    <div id="home">
-        <div class="playb">
-            <button class="play">PLAY</button>
-        </div>
-
+<html lang="en-us">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Unity WebGL Player | New Unity Project</title>
+    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <link rel="stylesheet" href="TemplateData/style.css">
+    <script src="TemplateData/UnityProgress.js"></script>
+    <script src="Build/UnityLoader.js"></script>
+    <script>
+      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/Game web.json", {onProgress: UnityProgress});
+    </script>
+  </head>
+  <body>
+    <div class="webgl-content">
+      <div id="unityContainer" style="width: 960px; height: 600px"></div>
+      <div class="footer">
+        <div class="webgl-logo"></div>
+        <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
+        <div class="title">New Unity Project</div>
+      </div>
     </div>
-
-
-
-    <div id="setting">
-        <h1 class="head">Settings</h1>
-        <div class="select">
-            <button>Visual</button>
-            <button>Control</button>
-            <button>Themes</button>
-        </div>
-    </div>
-
-    <script src="js/file.js"></script>
-    <script src="https://kit.fontawesome.com/15057286f2.js" crossorigin="anonymous"></script>
-</body>
+  </body>
+</html>
