--- a/404/index.html
+++ b/404/index.html
@@ -10,6 +10,7 @@
     </script>
   </head>
   <body>
-    <div id="unityContainer" style="width: 1080px; height: 1920px; margin: auto"></div>
+    <div style="height:20px; width: %UNITY_WIDTH%px; background: green;" onclick="unityInstance.SetFullscreen(1)"><b>Click here to make it full screen.</b></div>
+    <div id="unityContainer" style="width: 100vw; height: 100vh; margin: auto"></div>
   </body>
 </html>
