--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="right">
                     <p class="pleft">
                         <ul>
-                            <li>C++ Programmer Intern</li>
+                            <li>Frontend Web Developer Intern</li>
                             <li>Feburary 2021 - May 2021</li>
                         </ul>
                     </p>
