--- a/ImageSlider/index.html
+++ b/ImageSlider/index.html
@@ -18,18 +18,24 @@
         <img src="img/Scenery.jpg">
       </div>
       <div class="imagec fade">
+        <img src="img/Sunset Over Sea.jpg">
+      </div>
+      <div class="imagec fade">
         <img src="img/Sunset.jpg">
+      </div>
+      <div class="imagec fade">
+        <img src="img/Waste To Wonder.jpg">
       </div>
       <div class="imagec fade">
         <img src="img/Wildlife.jpg">
       </div>
 
-      <a class="prev" onclick="change(-1)"><</a>
-      <a class="next" onclick="change(1)">></a>
+      
 
     </div>
   <br>
-
+  <a class="prev" onclick="change(-1)"><</a>
+  <a class="next" onclick="change(1)">></a>
   <script src="index.js"></script>
 
   </body>
