--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                                         Guru Gobind Singh Indraprastha University
                                     </li>
                                     <li>
-                                        CGPA: 9.09 (Till 5th Sem)
+                                        CGPA: 9.1 (Till 3rd Year)
                                     </li>
                                 </ul>
                             </div>
@@ -475,7 +475,7 @@
                             <div class="project-des">
                                 <ul>
                                     <li>
-                                        Live Site: - <a target="_blank" href="https://mernbook.shubhamgoel.tech/">mernbook.shubhamgoel.tech</a>
+                                        Live Site: - <a target="_blank" href="https://mernbook.shubhamgoel24.me/">mernbook.shubhamgoel24.me</a>
                                     </li>
                                     <li>
                                         A full stack website inspired from Facebook
@@ -524,21 +524,21 @@
                     <div class="project">
                         <div class="project-img">
                             <img
-                                src="./img/Todo.png"
+                                src="./img/Notes.png"
                                 alt="To-Do"
                             />
                         </div>
                         <div class="project-content">
                             <span class="project-heading">
-                                To-Do List App
+                                Notes Share
                             </span>
                             <div class="project-des">
                                 <ul>
                                     <li>
-                                        Live Site: - <a target="_blank" href="https://todo.shubhamgoel.tech/">todo.shubhamgoel.tech</a>
+                                        Live Site: - <a target="_blank" href="https://notesshare.shubhamgoel24.me/">notesshare.shubhamgoel24.me</a>
                                     </li>
                                     <li>
-                                        App to help schedule tasks. Made using React, MongoDB, Express & node.js.
+                                        Web App to make notes. Using Node.js, MongoDB, React & Express.
                                     </li>
                                 </ul>
                             </div>
@@ -550,7 +550,7 @@
                             </div>
                             <div class="buttons">
                                 <a
-                                    href="https://github.com/shubhamgoel24/MernTodo"
+                                    href="https://github.com/shubhamgoel24/NotesShare"
                                     target="_blank"
                                     rel="noopener noreferrer"
                                 >
