--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         "
                         >Shubham Goel</span
                     >
-                    <span style="font-size: 2rem;">I'm <span style="color: #df5d20; font-size: 2rem;" class="typed" data-typed-items="a Student,a Coder,a Web Developer"></span></span>
+                    <span style="font-size: 2rem;">I'm <span style="color: #df5d20; font-size: 2rem;" class="typed" data-typed-items="a Software Developer,a Human"></span></span>
                 </div>
 
                 <img id="headimg" src="./img/Mainimg.svg" alt="Try Reloading" />
@@ -113,16 +113,14 @@
                                 on the web..
                             </p>
                             <p>
-                                I am pursuing B.Tech in Information Technology 
-                                from GGSIPU,Delhi and my primary focus
-                                and inspiration for my studies is Software Development.
+                                I have graduated from GGSIPU, 
                             </p>
                             <p>
                                 In my free time, I watch movies and play online
                                 video games. I am both self-driven and
                                 self-motivated, and I am constantly
                                 experimenting with new technologies and
-                                techniques. I also like to take photographs.
+                                techniques. I also like photography.
                             </p>
                             <p>
                                 I am very passionate about Web Development, and
